--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.0",
+    "react-widgets": "^4.6.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
